Source/NGD.Import.pas


function NewtonConvexHullGetFaceIndices(const convexHullCollision: PNewtonCollision; face: integer;
  faceIndices: PInteger): integer; cdecl; external NewtonDLL;
function NewtonConvexCollisionCalculateVolume(const convexCollision: PNewtonCollision): dFloat;
  cdecl; external NewtonDLL;
procedure NewtonConvexCollisionCalculateInertialMatrix(const convexCollision: PNewtonCollision;
  inertia, origin: PdFloat); cdecl; external NewtonDLL;

procedure NewtonCollisionMakeUnique(const NewtonWorld: PNewtonWorld;
  const collision: PNewtonCollision); cdecl; external NewtonDLL;
procedure NewtonReleaseCollision(const NewtonWorld: PNewtonWorld;
  const collision: PNewtonCollision); cdecl; external NewtonDLL;
function NewtonAddCollisionReference(const collision: PNewtonCollision): integer; cdecl;
  external NewtonDLL;

// **********************************************************************************************
//
// complex collision primitives creation functions
// note: can only be used with static bodies (bodies with infinite mass)
//
// **********************************************************************************************
type
  TCollisionPrimitiveArray = array of PNewtonCollision;

function NewtonCreateCompoundCollision(const NewtonWorld: PNewtonWorld; count: integer;
  const collisionPrimitiveArray: TCollisionPrimitiveArray; shapeID: integer): PNewtonCollision;
  cdecl; external{$IFDEF __GPC__}name 'NewtonCreateCompoundCollision'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonCreateCompoundCollisionFromMesh(const NewtonWorld: PNewtonWorld;
  const Mesh: PNewtonMesh; maxSubShapesCount: integer; shapeID: integer; subShapeID: integer)
  : PNewtonCollision; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCreateCompoundCollisionFromMesh'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonCreateUserMeshCollision(const NewtonWorld: PNewtonWorld; const minBox: PdFloat;
  const maxBox: PdFloat; userData: Pointer; collideCallback: NewtonUserMeshCollisionCollideCallback;
  rayHitCallback: NewtonUserMeshCollisionRayHitCallback;
  destroyCallback: NewtonUserMeshCollisionDestroyCallback;
  getInfoCallback: NewtonUserMeshCollisionGetCollisionInfo;
  facesInAABBCallback: NewtonUserMeshCollisionGetFacesInAABB; shapeID: integer): PNewtonCollision;
  cdecl; external{$IFDEF __GPC__}name 'NewtonCreateUserMeshCollision'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonCreateSceneCollision(const NewtonWorld: PNewtonWorld; shapeID: integer)
  : PNewtonCollision; cdecl; external NewtonDLL;
function NewtonSceneCollisionCreateProxy(scene: PNewtonCollision; collision: PNewtonCollision)
  : PNewtonSceneProxy; cdecl; external NewtonDLL;
procedure NewtonSceneCollisionDestroyProxy(scene: PNewtonCollision; Proxy: PNewtonSceneProxy);
  cdecl; external NewtonDLL;
procedure NewtonSceneProxySetMatrix(Proxy: PNewtonSceneProxy; const matrix: PdFloat); cdecl;
  external NewtonDLL;
procedure NewtonSceneProxyGetMatrix(Proxy: PNewtonSceneProxy; matrix: PdFloat); cdecl;
  external NewtonDLL;
procedure NewtonSceneSetProxyUserData(const Proxy: PNewtonSceneProxy; userData: Pointer); cdecl;
  external NewtonDLL;
function NewtonSceneGetProxyUserData(const Proxy: PNewtonSceneProxy): Pointer; cdecl;
  external NewtonDLL;
function NewtonSceneGetFirstProxy(const scene: PNewtonCollision): PNewtonSceneProxy; cdecl;
  external NewtonDLL;
function NewtonSceneGetNextProxy(const scene: PNewtonCollision; const Proxy: PNewtonSceneProxy)
  : PNewtonSceneProxy; cdecl; external NewtonDLL;

procedure NewtonSceneCollisionOptimize(scene: PNewtonCollision); cdecl; external NewtonDLL;

// **********************************************************************************************
//
// Fractured compound collision primitives interface
//
// **********************************************************************************************
function NewtonCreateCompoundBreakable(const NewtonWorld: PNewtonWorld; meshCount: integer;
  const SolidsArray: PNewtonMesh; const ShapeIDArray: PInteger; Densities: PdFloat;
  internalFaceMaterial: PInteger; shapeID: integer; debrisID: integer; DebrisSeparationGap: dFloat)
  : PNewtonCollision; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCreateCompoundBreakable'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonCompoundBreakableResetAnchoredPieces(const compoundBreakable: PNewtonCollision);
  cdecl; external{$IFDEF __GPC__}name 'NewtonCompoundBreakableResetAnchoredPieces'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonCompoundBreakableSetAnchoredPieces(const compoundBreakable: PNewtonCollision;
  fixshapesCount: integer; matrixPallete: PdFloat; fixedShapesArray: PNewtonCollision); cdecl;
  external{$IFDEF __GPC__}name 'NewtonCompoundBreakableSetAnchoredPieces'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonCompoundBreakableGetVertexCount(const compoundBreakable: PNewtonCollision): integer;
  cdecl; external{$IFDEF __GPC__}name 'NewtonCompoundBreakableGetVertexCount'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonCompoundBreakableGetVertexStreams(const compoundBreakable: PNewtonCollision;
  vertexStrideInByte: integer; vertex: PdFloat; normalStrideInByte: integer; normal: PdFloat;
  uvStrideInByte: integer; uv: PdFloat); cdecl;
  external{$IFDEF __GPC__}name 'NewtonCompoundBreakableGetVertexStreams'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonBreakableGetMainMesh(const compoundBreakable: PNewtonCollision)
  : PNewtonBreakableComponentMesh; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableGetMainMesh'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBreakableGetFirstComponent(const compoundBreakable: PNewtonCollision)
  : PNewtonBreakableComponentMesh; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableGetFirstComponent'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBreakableGetNextComponent(const component: PNewtonBreakableComponentMesh)
  : PNewtonBreakableComponentMesh; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableGetNextComponent'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonBreakableBeginDelete(const compoundBreakable: PNewtonCollision); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableBeginDelete'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBreakableCreateDebrieBody(const compoundBreakable: PNewtonCollision;
  const component: PNewtonBreakableComponentMesh): PNewtonBody; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableCreateDebrieBody'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBreakableDeleteComponent(const compoundBreakable: PNewtonCollision;
  const component: PNewtonBreakableComponentMesh); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableDeleteComponent'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonBreakableEndDelete(const compoundBreakable: PNewtonCollision); cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableBeginDelete'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonBreakableGetComponentsInRadius(const compoundBreakable: PNewtonCollision;
  const position: PdFloat; radius: dFloat; Segments: PNewtonBreakableComponentMesh;
  maxCount: integer): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableGetComponentsInRadius'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonBreakableGetFirstSegment(const BreakableComponent: PNewtonBreakableComponentMesh)
  : Pointer; cdecl; external{$IFDEF __GPC__}name 'NewtonBreakableGetFirstSegment'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBreakableGetNextSegment(const Segment: Pointer): Pointer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableGetNextSegment'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonBreakableSegmentGetMaterial(const Segment: Pointer): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableSegmentGetMaterial'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBreakableSegmentGetIndexCount(const Segment: Pointer): integer; cdecl;
  external{$IFDEF __GPC__}name 'NewtonBreakableSegmentGetIndexCount'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBreakableSegmentGetIndexStream(compoundBreakable: PNewtonCollision;
  const MeshOwner: PNewtonBreakableComponentMesh; const Segment: Pointer; index: PInteger): integer;
  cdecl; external{$IFDEF __GPC__}name 'NewtonBreakableSegmentGetIndexStream'{$ELSE}NewtonDLL{$ENDIF __GPC__};
function NewtonBreakableSegmentGetIndexStreamShort(compoundBreakable: PNewtonCollision;
  const MeshOwner: PNewtonBreakableComponentMesh; const Segment: Pointer; index: PShort): integer;
  cdecl; external{$IFDEF __GPC__}name 'NewtonBreakableSegmentGetIndexStreamShort'{$ELSE}NewtonDLL{$ENDIF __GPC__};


// ***********************************************************************************************************
//
// Collision serialization functions
//
// ***********************************************************************************************************

function NewtonCreateCollisionFromSerialization(const NewtonWorld: PNewtonWorld;
  deserializeFunction: PNewtonDeserialize; serializeHandle: Pointer): PNewtonCollision; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCreateCollisionFromSerialization'{$ELSE}NewtonDLL{$ENDIF __GPC__};

// ***********************************************************************************************************
//
// Collision serialization functions
//
// ***********************************************************************************************************
procedure NewtonCollisionSerialize(const NewtonWorld: PNewtonWorld;
  const collision: PNewtonCollision; serializeFunction: PNewtonSerialize; serializeHandle: Pointer);
  cdecl; external{$IFDEF __GPC__}name 'NewtonCollisionSerialize'{$ELSE}NewtonDLL{$ENDIF __GPC__};

procedure NewtonCollisionGetInfo(const collision: PNewtonCollision;
  collisionInfo: PNewtonCollisionInfoRecord); cdecl;
  external{$IFDEF __GPC__}name 'NewtonCollisionGetInfo'{$ELSE}NewtonDLL{$ENDIF __GPC__};

// **********************************************************************************************
//
// Static collision shapes functions
//
// **********************************************************************************************
function NewtonCreateHeightFieldCollision(const NewtonWorld: PNewtonWorld;
  width, height, gridDiagonals: integer; elevationMap: PUnsigned_short; attributeMap: P2Char;
  horizontalScale, verticalScale: dFloat; shapeID: integer): PNewtonCollision; cdecl;
  external{$IFDEF __GPC__}name 'NewtonCreateHeightFieldCollision'{$ELSE}NewtonDLL{$ENDIF __GPC__};
procedure NewtonHeightFieldSetUserRayCastCallback(const TreeCollision: PNewtonCollision;
  rayHitCallback: PNewtonHeightFieldRayCastCallback); cdecl;
  external{$IFDEF __GPC__}name 'NewtonHeightFieldSetUserRayCastCallback'{$ELSE}NewtonDLL{$ENDIF __GPC__};

function NewtonCreateTreeCollision(const NewtonWorld: PNewtonWorld; shapeID: integer)
  : PNewtonCollision; cdecl; external NewtonDLL;
function NewtonCreateTreeCollisionFromMesh(const NewtonWorld: PNewtonWorld; const Mesh: PNewtonMesh;
  shapeID: integer): PNewtonCollision; cdecl; external NewtonDLL;
procedure NewtonTreeCollisionSetUserRayCastCallback(const TreeCollision: PNewtonCollision;
  rayHitCallback: PNewtonCollisionTreeRayCastCallback); cdecl; external NewtonDLL;

procedure NewtonTreeCollisionBeginBuild(const TreeCollision: PNewtonCollision); cdecl;
  external NewtonDLL;
procedure NewtonTreeCollisionAddFace(const TreeCollision: PNewtonCollision; vertexCount: integer;
  const vertexPtr: PdFloat; strideInBytes: integer; faceAttribute: integer); cdecl;
  external NewtonDLL;
procedure NewtonTreeCollisionEndBuild(const TreeCollision: PNewtonCollision; optimize: integer);
  cdecl; external NewtonDLL;

function NewtonTreeCollisionGetFaceAtribute(const TreeCollision: PNewtonCollision;
  const faceIndexArray: PInteger): integer; cdecl; external NewtonDLL;
procedure NewtonTreeCollisionSetFaceAtribute(const TreeCollision: PNewtonCollision;
  const faceIndexArray: PInteger; attribute: integer); cdecl;
  external{$IFDEF __GPC__}name 'NewtonTreeCollisionSetFaceAtribute'{$ELSE}NewtonDLL{$ENDIF __GPC__};
